--- a/app/src/main/res/layout/fragment_update_password.xml
+++ b/app/src/main/res/layout/fragment_update_password.xml
@@ -3,18 +3,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragments.RegionSettings.RegionSettingsFragment"
+    tools:context=".Fragments.Settings.UpdatePasswordFragment"
     android:background="@color/transparent">
 
     <FrameLayout
-        android:id="@+id/userRegionLayout"
+        android:id="@+id/updatePasswordLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="90dp"
-        android:layout_marginBottom="200dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="25dp"
         android:layout_marginEnd="25dp"
-        tools:ignore="UselessParent">
+        tools:ignore="UselessParent"
+        android:layout_gravity="center">
 
         <FrameLayout
             android:layout_width="match_parent"
@@ -30,10 +29,11 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="15dp"
-                    android:text="Before we start..."
+                    android:layout_marginTop="30dp"
+                    android:layout_marginStart="15dp"
+                    android:text="So you want to change your password..."
                     android:textAlignment="center"
-                    android:textSize="18sp" />
+                    android:textSize="18sp"/>
 
                 <TextView
                     android:layout_width="match_parent"
@@ -41,54 +41,30 @@
                     android:layout_marginStart="15dp"
                     android:layout_marginTop="5dp"
                     android:layout_marginEnd="15dp"
-                    android:text="we have to set up a few things to better personalize your experience"
+                    android:text="keep in mind that you are allowed to change your password only once a month"
                     android:textAlignment="center"
-                    android:textSize="16sp" />
+                    android:textSize="16sp"/>
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="15dp"
                     android:layout_marginTop="35dp"
-                    android:text="Which country do you reside in?"
+                    android:layout_marginEnd="15dp"
+                    android:text="Your current password"
                     android:textAlignment="center"
-                    android:textSize="16sp" />
-
-                <androidx.appcompat.widget.AppCompatSpinner
-                    android:id="@+id/userRegionSettingCountrySpinner"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:layout_marginStart="25dp"
-                    android:layout_marginTop="15dp"
-                    android:layout_marginEnd="25dp"
-                    android:background="@drawable/custom_view_holder_7"/>
+                    android:textSize="16sp"/>
 
                 <TextView
+                    android:id="@+id/currentPassword"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="25dp"
-                    android:layout_marginTop="30dp"
-                    android:layout_marginEnd="25dp"
-                    android:text="And which is your preferred currency type?"
-                    android:textAlignment="center"
-                    android:textSize="16sp" />
-
-                <androidx.appcompat.widget.AppCompatSpinner
-                    android:id="@+id/userRegionSettingCurrencySpinner"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:layout_marginStart="25dp"
+                    android:layout_marginStart="15dp"
                     android:layout_marginTop="15dp"
-                    android:layout_marginEnd="25dp"
-                    android:background="@drawable/custom_view_holder_7"/>
-
-                <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/userRegionSubmitButton"
-                    android:layout_width="125dp"
-                    android:layout_height="55dp"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="30dp"
-                    android:text="Submit"
-                    android:background="@drawable/custom_button"/>
+                    android:layout_marginEnd="15dp"
+                    android:text="PLACEHOLDER"
+                    android:textAlignment="center"
+                    android:textSize="16sp"/>
 
                 <TextView
                     android:layout_width="match_parent"
@@ -96,10 +72,30 @@
                     android:layout_marginStart="25dp"
                     android:layout_marginTop="20dp"
                     android:layout_marginEnd="25dp"
-                    android:text="*the data given by the user will be solely used for improving the user experience/ statistics and they can be changed in the settings any time"
+                    android:text="And you want to change it to..."
                     android:textAlignment="center"
-                    android:textSize="12sp" />
+                    android:textSize="16sp"/>
 
+                <EditText
+                    android:id="@+id/newPassword"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="25dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginEnd="25dp"
+                    android:text="PLACEHOLDER"
+                    android:textAlignment="center"
+                    android:textSize="16sp"/>
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/updatePasswordSaveButton"
+                    android:layout_width="125dp"
+                    android:layout_height="55dp"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="30dp"
+                    android:layout_marginBottom="30dp"
+                    android:text="Save"
+                    android:background="@drawable/custom_button"/>
             </LinearLayout>
 
         </FrameLayout>
