--- a/app/src/main/res/layout/fragment_region_settings.xml
+++ b/app/src/main/res/layout/fragment_region_settings.xml
@@ -2,7 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".Fragments.RegionSettings.RegionSettingsFragment"
     android:background="@color/transparent">
 
@@ -19,7 +19,7 @@
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/custom_view_holder_2"
+            android:background="@drawable/custom_view_holder_8"
             android:layout_gravity="center">
 
             <LinearLayout
@@ -30,7 +30,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="15dp"
+                    android:layout_marginTop="30dp"
                     android:text="Before we start..."
                     android:textAlignment="center"
                     android:textSize="18sp" />
@@ -96,6 +96,7 @@
                     android:layout_marginStart="25dp"
                     android:layout_marginTop="20dp"
                     android:layout_marginEnd="25dp"
+                    android:layout_marginBottom="30dp"
                     android:text="*the data given by the user will be solely used for improving the user experience/ statistics and they can be changed in the settings any time"
                     android:textAlignment="center"
                     android:textSize="12sp" />
