--- a/app/src/main/res/layout/custom_debt_spinner_item.xml
+++ b/app/src/main/res/layout/custom_debt_spinner_item.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@drawable/custom_view_holder_7">
 
     <ImageView
         android:id="@+id/debtImage"
@@ -16,9 +17,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toEndOf="@+id/debtImage"
-        android:layout_marginStart="30dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
         android:layout_centerVertical="true"
-        android:text="Description"
         android:textSize="18sp"
         android:textStyle="bold" />
 
