--- a/app/src/main/res/layout/dashboard.xml
+++ b/app/src/main/res/layout/dashboard.xml
@@ -100,7 +100,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/totalTransactions"
+                android:text="@string/totalExpense"
                 android:textAlignment="center"
                 android:textColor="@color/white"
                 android:background="@android:color/transparent"
