--- a/app/src/main/res/layout/fragment_expense.xml
+++ b/app/src/main/res/layout/fragment_expense.xml
@@ -25,11 +25,11 @@
 
             <androidx.appcompat.widget.AppCompatSpinner
                 android:id="@+id/expenseSpinner"
-                android:layout_width="0dp"
+                android:layout_width="150dp"
                 android:layout_height="45dp"
-                android:layout_weight="1"
                 android:layout_marginStart="10dp"
-                android:spinnerMode="dropdown"/>
+                android:spinnerMode="dropdown"
+                android:padding="5dp"/>
 
             <EditText
                 android:id="@+id/expenseAmount"
@@ -39,14 +39,15 @@
                 android:inputType="numberDecimal"
                 android:hint="Amount"/>
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/addExpense"
                 android:layout_width="75dp"
-                android:layout_height="45dp"
+                android:layout_height="35dp"
                 android:layout_marginStart="15dp"
                 android:layout_marginEnd="15dp"
                 android:text="Add"
-                android:textStyle="bold"/>
+                android:textStyle="bold"
+                android:background="@drawable/custom_button"/>
         </LinearLayout>
 
     </RelativeLayout>
