--- a/app/src/main/res/layout/fragment_income.xml
+++ b/app/src/main/res/layout/fragment_income.xml
@@ -29,8 +29,7 @@
                 android:layout_height="45dp"
                 android:layout_marginStart="10dp"
                 android:spinnerMode="dropdown"
-                android:padding="5dp"
-                android:background="@drawable/custom_view_holder_7"/>
+                android:padding="5dp"/>
 
             <EditText
                 android:id="@+id/incomeAmount"
