--- a/app/src/main/res/layout/applist_main.xml
+++ b/app/src/main/res/layout/applist_main.xml
@@ -112,6 +112,7 @@
             android:background="@drawable/custom_view_holder_3">
 
             <LinearLayout
+                android:id="@+id/appListStatistics"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="15dp"
