--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="grey">#c5d8e1</color>
     <color name="dark_gery">#334553</color>
     <color name="transparent">#CC000000</color>>
+    <color name="redReusable">#f34a62</color>
 </resources>
