--- a/app/src/main/res/layout/fragment_delete_user.xml
+++ b/app/src/main/res/layout/fragment_delete_user.xml
@@ -56,7 +56,8 @@
                     android:layout_marginEnd="25dp"
                     android:text="Hereby I confirm that I want to delete my account"
                     android:textAlignment="center"
-                    android:textSize="16sp"/>
+                    android:textSize="16sp"
+                    android:buttonTint="@color/redReusable"/>
 
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/deleteUserSaveButton"
