added firebase type push-notification; added expense summing for weeks, months, years; updated app picture; handing of message tokens for users; saving them into the database

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -46,6 +46,7 @@
                 android:drawableStart="@drawable/user"
                 android:drawablePadding="15dp"
                 android:hint="@string/user_hint"
+                android:text="Misike"
                 android:textColorHint="@android:color/white"
                 android:padding="15dp"
                 android:textColor="@color/white"
@@ -62,6 +63,7 @@
                 android:drawableStart="@drawable/email"
                 android:drawablePadding="15dp"
                 android:hint="@string/email"
+                android:text="misike@gmail.com"
                 android:textColorHint="@android:color/white"
                 android:padding="15dp"
                 android:textColor="@color/white"
@@ -79,6 +81,7 @@
                 android:drawableStart="@drawable/password"
                 android:drawablePadding="15dp"
                 android:hint="@string/password_hint"
+                android:text="Misike77!"
                 android:textColorHint="@android:color/white"
                 android:padding="15dp"
                 android:textColor="@color/white"
@@ -95,6 +98,7 @@
                 android:drawableStart="@drawable/password"
                 android:drawablePadding="15dp"
                 android:hint="@string/password_confirmation"
+                android:text="Misike77!"
                 android:textColorHint="@android:color/white"
                 android:padding="15dp"
                 android:textColor="@color/white"
