--- a/app/src/main/res/layout/activity_general_statistics.xml
+++ b/app/src/main/res/layout/activity_general_statistics.xml
@@ -39,7 +39,8 @@
             android:layout_weight="1"
             android:layout_marginStart="15dp"
             android:layout_marginEnd="15dp"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_gravity="center">
 
             <TextView
                 android:id="@+id/statisticsUsername"
@@ -58,9 +59,10 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Income:"/>
+                    android:text="Actual income:"/>
 
                 <TextView
+                    android:id="@+id/statisticsIncome"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="PLACEHOLDER"/>
@@ -75,9 +77,10 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Expense:"/>
+                    android:text="Actual expenses:"/>
 
                 <TextView
+                    android:id="@+id/statisticsExpense"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="PLACEHOLDER"/>
@@ -92,9 +95,10 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Debt:"/>
+                    android:text="Actual debt:"/>
 
                 <TextView
+                    android:id="@+id/statisticsDebt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="PLACEHOLDER"/>
@@ -118,14 +122,15 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Average spending a week:"/>
+                    android:text="Average spending a week:" />
 
                 <TextView
+                    android:id="@+id/statisticsAverageWeeklySpending"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="PLACEHOLDER"/>
-
             </LinearLayout>
+
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -138,6 +143,7 @@
                     android:text="Average spending a month:"/>
 
                 <TextView
+                    android:id="@+id/statisticsAverageMonthlySpending"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="PLACEHOLDER"/>
@@ -155,10 +161,140 @@
                     android:text="Estimated spending for future:"/>
 
                 <TextView
+                    android:id="@+id/statisticsEstimatedSpending"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="PLACEHOLDER"/>
 
+            </LinearLayout>
+
+            <View
+                android:layout_width="310dp"
+                android:layout_height="5dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="15dp"
+                android:layout_gravity="center"
+                android:background="@drawable/custom_view_holder_8">
+            </View>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="5dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Most money spent in a week:" />
+
+                <TextView
+                    android:id="@+id/statisticsMaxWeeklySpending"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="PLACEHOLDER"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="5dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Most money spent in a month:" />
+
+                <TextView
+                    android:id="@+id/statisticsMaxMonthlySpending"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="PLACEHOLDER"/>
+            </LinearLayout>
+
+            <View
+                android:layout_width="310dp"
+                android:layout_height="5dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="15dp"
+                android:layout_gravity="center"
+                android:background="@drawable/custom_view_holder_8">
+            </View>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="5dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Most money spent on in a week:" />
+
+                <TextView
+                    android:id="@+id/statisticsMaxWeeklySpendingItem"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="PLACEHOLDER"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="5dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Least money spent on in a week:" />
+
+                <TextView
+                    android:id="@+id/statisticsMinWeeklySpendingItem"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="PLACEHOLDER"/>
+            </LinearLayout>
+
+            <View
+                android:layout_width="310dp"
+                android:layout_height="5dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="15dp"
+                android:layout_gravity="center"
+                android:background="@drawable/custom_view_holder_8">
+            </View>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="5dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Most money spent on in a month:" />
+
+                <TextView
+                    android:id="@+id/statisticsMaxMonthlySpendingItem"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="PLACEHOLDER"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="5dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Least money spent on in a month:" />
+
+                <TextView
+                    android:id="@+id/statisticsMinMonthlySpendingItem"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="PLACEHOLDER"/>
             </LinearLayout>
 
             <View
@@ -177,7 +313,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
-            android:layout_marginBottom="15dp"
+            android:layout_marginBottom="30dp"
             android:padding="15dp"
             android:text="Generate statistics"
             android:textSize="16sp"
