--- a/app/src/main/res/layout/statistics_and_chat_layout.xml
+++ b/app/src/main/res/layout/statistics_and_chat_layout.xml
@@ -28,10 +28,22 @@
             android:text="Estimated expenses"
             android:textSize="16sp"/>
 
-        <androidx.appcompat.widget.AppCompatSpinner
-            android:layout_width="230dp"
+        <TextView
+            android:id="@+id/estimatedExpenseValue"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toEndOf="@+id/estimatedExpenseTextView"/>
+            android:text="PLACEHOLDER"
+            android:layout_marginStart="75dp"
+            android:layout_toEndOf="@id/estimatedExpenseTextView"/>
+
+        <TextView
+            android:id="@+id/estimatedExpenseCurrency"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="NIL"
+            android:layout_marginStart="15dp"
+            android:layout_toEndOf="@id/estimatedExpenseValue"/>
+
 
     </RelativeLayout>
 
