--- a/app/src/main/res/layout/dialog_spinner.xml
+++ b/app/src/main/res/layout/dialog_spinner.xml
@@ -2,27 +2,68 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:background="@drawable/custom_view_holder_7">
 
-    <ProgressBar
-        android:id="@+id/progressBar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:visibility="gone" />
-
-    <Button
-        android:id="@+id/retry_button"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Retry" />
+        android:orientation="vertical"
+        android:padding="30dp"
+        android:background="@drawable/custom_edit_test_background">
 
-    <Button
-        android:id="@+id/exit_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="Exit" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:text="Uh oh! We have a little problem..."
+            android:textStyle="bold"
+            android:textSize="18sp"
+            android:textAlignment="center" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:text="It seems like your device lost connection and is unable to communicate with the server."
+            android:textStyle="bold"
+            android:textSize="16sp"
+            android:textAlignment="center"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="15dp"
+            android:text="You can reconnect or exit the app and try again later."
+            android:textStyle="bold"
+            android:textSize="16sp"
+            android:textAlignment="center"/>
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:visibility="gone"/>
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/retry_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="14dp"
+            android:text="Retry"
+            android:textStyle="bold"
+            android:background="@drawable/custom_button"/>
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/exit_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="Exit"
+            android:textStyle="bold"
+            android:background="@drawable/custom_button"/>
+
+    </LinearLayout>
 
 </LinearLayout>
