--- a/app/src/main/res/layout/custom_navigation_drawer.xml
+++ b/app/src/main/res/layout/custom_navigation_drawer.xml
@@ -76,6 +76,7 @@
             android:textSize="20sp"/>
 
         <TextView
+            android:id="@+id/spendingLimitTextView"
             android:clickable="true"
             android:focusable="true"
             android:layout_width="wrap_content"
